syntax="proto3";

package com.garow.proto.conn;
/*
* 客户端离线通知
*/
message OfflineEvent{
int32 type = 1;
}